# someWorks

./: .gitignore  Commite's Names rules.md  README.md
C#/290526/: .gitignore  290526.sln
C#/DevelopmentLessonTask010626/: DevelopmentLessonTask010626.sln
C#/DevelopmentLessonTaskII010626/: DevelopmentLessonTaskII010626.sln
Cpp/-OOPcppExam270326/: Point.h  Point.inl  Program.cpp  Vector.h  Vector.inl  conApp  program
Cpp/consoleApps/180526/: CMakeLists.txt  library.cpp  library.h  result.md
Cpp/consoleApps/180526/tests/: my_test.cpp
Cpp/five-year plan in 3 days/: 121125.cpp  141125.cpp  181125.cpp  211125.cpp  221125.cpp  51125.cpp  71125.cpp
HomeWork/HomeWork18_11/: main0.1.py
HomeWork/HomeWork30_1/: main0.2.py
HomeWork/HomeWork30_2/: main.1.0.py  main1.4.py
HomeWork/HomeWork30_3/: main0.2  main0.6
HomeWork/HomeWork31_10_0/: main0.3.py
HomeWork/HomeWork_7.12.24/: main0X.py
HomeWork/Int-markt/: Отчет.md  (+1 more)
HomeWork18_11/: main0.2.py  main0.3.py  main0.4.py
HomeWork1_11/: main0.2.py  main0.3.py  main0.5.py
HomeWork25_11/: main0.1.py  main0.2.py  main0.3.py
HomeWork30_1/: main0.3.py
HomeWork30_11/: main0.3.py  main0.4.py
HomeWork30_2/: main1.1.py
HomeWork30_3/: main0.1  main0.4
HomeWork31_10_0/: main0.2.py  main0.4.py
HomeWork31_10_1/: main0.1.py  main0.3.py
Py_filesHomeTasks/: main1.py  main2.py  main4.py  main5.py
SomeTestsWith_[]_0.1/: main0.1.py  reBUILDLIST01.py  reBUILDSET01.py  reBUILDSet.py  reBUILDlist.py
python/: hometask.py  pytask2.py  task_count_pos_neg.py  task_greater_than_x.py  task_sum_even_positive.py
(+946 files in other folders)
